--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
+description = "This application separates purchas orders from various stores found in a large csv file into individual csv files."
 authors = ["Joel Montes de Oca"]
 edition = "2021"
 name = "lisa"
-version = "0.2.1"
+version = "1.0.0"
 
 [dependencies]
 anyhow = "1.0"
