--- a/src/Cargo.toml
+++ b/src/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0"
 clap = { version = "3.1", features = ["derive"] }
 csv = "1"
 serde = { version = "1", features = ["derive"] }
+paris = "1.5"
