--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
-description = "This application separates purchas orders from various stores found in a large csv file into individual csv files."
 authors = ["Joel Montes de Oca"]
+description = "This application separates purchas orders from various stores found in a large csv file into individual csv files."
 edition = "2021"
 name = "lisa"
-version = "1.3.2"
-
+version = "1.4.3"
 [dependencies]
 anyhow = "1.0"
-clap = { version = "3.1", features = ["derive"] }
 csv = "1"
-serde = { version = "1", features = ["derive"] }
+log = "0.4"
+pretty_env_logger = "0.4"
+
+[dependencies.clap]
+features = ["derive"]
+version = "3.1"
+
+[dependencies.serde]
+features = ["derive"]
+version = "1"
