--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ version = "3.1"
 [dependencies.serde]
 features = ["derive"]
 version = "1"
+
+[lib]
+name = "lisa"
+path = "src/lib.rs"
+
+[[bin]]
+name = "lisa"
+path = "src/main.rs"
