Removed ability to publish to crates.io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ name = "lisa"
 version = "1.5.1-alpha"
 readme = "README.md"
 repository = "https://github.com/JoelMon/lisa/"
+publish = false
 
 [[bin]]
 name = "lisa"
