--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,9 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
+    - name: Install on Linux
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt install -y libgdk3.0-cil-dev
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
