--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - name: Install on Linux
       if: matrix.os == 'ubuntu-latest'
-      run: sudo apt install -y libgdk3.0-cil-dev libatk3.0-cil
+      run: sudo apt install -y libgdk3.0-cil-dev libatk3.0-cil libgtk-3-dev
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build
