--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,29 @@ authors = ["Joel Montes de Oca"]
 description = "This application separates purchas orders from various stores found in a large csv file into individual csv files."
 edition = "2021"
 name = "lisa"
-version = "1.4.3"
-[dependencies]
-anyhow = "1.0"
-csv = "1"
-log = "0.4"
-pretty_env_logger = "0.4"
+version = "2.0.1"
+readme = "README.md"
+repository = "https://github.com/JoelMon/lisa/"
+publish = false
 
-[dependencies.clap]
-features = ["derive"]
-version = "3.1"
+[[bin]]
+name = "lisa"
+path = "src/main.rs"
+
+[lib]
+name = "lisa"
+path = "src/lib.rs"
+
+[dependencies]
+anyhow = "1.0.57"
+clap = { version = "3.2.5", features = ["derive"] }
+csv = "1.1.6"
+eframe = "0.18.0"
+egui = "0.18.1"
+log = "0.4.17"
+pretty_env_logger = "0.4.0"
+rfd = "0.9.1"
 
 [dependencies.serde]
 features = ["derive"]
-version = "1"
+version = "1.0.137"
